simple-tls/kubernetes-gateway-sample.yml
---
kind: GatewayClass
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: my-gateway-class
spec:
  controller: traefik.io/gateway-controller

---
kind: Gateway
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: my-tls-gateway
  namespace: default
spec:
  gatewayClassName: my-gateway-class
  listeners:
    - protocol: TLS
      port: 9443
      hostname: whoami.localhost
      tls:
        certificateRef:
          group: "core"
          kind: "Secret"
          name: "mysecret"
      routes:
        kind: TLSRoute
        namespaces:
          from: Same
        selector:
          matchLabels:
            app: tls-app-1-label

---
kind: TLSRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: tls-app-1
  namespace: default
  labels:
    app: tls-app-1-label
spec:
  rules:
    - forwardTo:
        - serviceName: whoamitcp
          port: 9000
          weight: 1
